--- a/homework-week-6.Rmd
+++ b/homework-week-6.Rmd
@@ -21,19 +21,131 @@ The function should return a list containing:
     CI (the two-sided CI with respect to “conf.level” around p1 in the case of a one-sample test and around p2-p1 in the case of a two-sample test). 
     For all test alternatives (“two.sided”, “greater”, “less”), calculate symmetric CIs based on quantiles of the normal distribution rather than worrying about calculating single-limit confidence bounds.
 
-```{r}
-Z.prop.test<-function(p1, n1, p2=NULL, n2=NULL, p0, alternative="two.sided", conf.level=0.95){
+
+```{r function part 1, one sample prop test}
+Z.prop.test<-function(p1, n1, p2=NULL, n2=NULL, p0, alternative="two.sided", conf.level=0.95) {
+#one sample test
+    if(is.null(p2)||is.null(n2)) {
+    if (alternative == "two.sided") {
+      z <- (p1 - p0)/sqrt(p0 * (1 - p0)/n1)
+      p <- 1 - pnorm(z, lower.tail = TRUE) + pnorm(z, lower.tail = FALSE)
+    lower <- p1 - qnorm((1 - (1 - conf.level)/2)) * sqrt(p1 * (1 - p1)/n1)
+    upper <- p1 + qnorm((1 - (1 - conf.level)/2)) * sqrt(p1 * (1 - p1)/n1)
+    ci <- c(lower, upper)
+    }
   
-  
-#tests
-  if(is.null(p2)||is.null(n2)){
+    if (alternative =="greater") {
+      if (p1<p0) stop ("p0>p1, use alternative='lesser'")
     z <- (p1 - p0)/sqrt(p0 * (1 - p0)/n1)
+    p <- pnorm(z, lower.tail=FALSE)
+    lower <- p1 - qnorm((1 - (1 - conf.level)/2)) * sqrt(p1 * (1 - p1)/n1)
+    upper <- p1 + qnorm((1 - (1 - conf.level)/2)) * sqrt(p1 * (1 - p1)/n1)
+    ci <- c(lower, upper)
+    }
+    
+    if (alternative =="lesser") {
+      if (p1>p0) stop ("p1>p0, use alternative='greater'")
+    z <- (p1-p0)/sqrt(p0 * (1 - p0)/n1)
+    p <- pnorm(z, lower.tail=TRUE)
+    lower <- p1 - qnorm((1 - (1 - conf.level)/2)) * sqrt(p1 * (1 - p1)/n1)
+    upper <- p1 + qnorm((1 - (1 - conf.level)/2)) * sqrt(p1 * (1 - p1)/n1)
+    ci <- c(lower, upper)
+    }
+    }
+  else{
+  #two sample test
+    if (alternative == "two.sided") {
+  pstar<-(p1 * n1 + p2 * n2) / (n1 + n2)
+  z <- (p2 - p1)/sqrt((pstar * (1 - pstar)) * (1/n1 + 1/n2))
+  p <- 1 - pnorm(z, lower.tail = TRUE) + pnorm(z, lower.tail = FALSE)
+  lower <- (p2 - p1) - qnorm((1 - (1 - conf.level)/2)) * sqrt((p1*(1-p1))/n1 + (p2*(1 - p2))/(n2))
+  upper <- (p2 - p1) + qnorm((1 - (1 - conf.level)/2)) * sqrt((p1*(1-p1))/n1 + (p2*(1 - p2))/(n2))
+  ci <- c(lower, upper)
+    }
+  
+    if (alternative =="greater") {
+      if (p1>p2) stop ("p2>p1, use alternative='lesser'")
+   
+  pstar<-(p1 * n1 + p2 * n2) / (n1 + n2)
+  z <- (p2 - p1)/sqrt((pstar * (1 - pstar)) * (1/n1 + 1/n2))
+  p <- 1 - pnorm(z, lower.tail = FALSE)
+  lower <- (p2 - p1) - qnorm((1 - (1 - conf.level)/2)) * sqrt((p1*(1-p1))/n1 + (p2*(1 - p2))/(n2))
+  upper <- (p2 - p1) + qnorm((1 - (1 - conf.level)/2)) * sqrt((p1*(1-p1))/n1 + (p2*(1 - p2))/(n2))
+  ci <- c(lower, upper)
+      
+    }
+    
+  if (alternative =="lesser") {
+    if (p1<p2) stop ("p1>p2, use alternative='greater'")
+      pstar<-(p1 * n1 + p2 * n2) / (n1 + n2)
+      z <- (p2 - p1)/sqrt((pstar * (1 - pstar)) * (1/n1 + 1/n2))
+      p <- 1 - pnorm(z, lower.tail = TRUE)
+      lower <- pstar - qnorm((1 - (1 - conf.level)/2)) * sqrt(pstar * (1 - pstar)/(n1+n2))
+      upper <- pstar + qnorm((1 - (1 - conf.level)/2)) * sqrt((p1*(1-p1))/n1 + (p2*(1 - p2))/(n2))
+      ci <- c(lower, upper)
+    }}
+  
+    l<-list(
+    "Z" = z,
+    "p" = p,
+    "Confidence interval" = ci)
+  return (l) 
+    }
+
+
+```
+
+```{r}
+Z.prop.test(p1=0.56, p2=0.7, n1=25, n2=30, alternative="two.sided")
+```
+**TO DO**
+- Check that two sample alternative greater and less work
+- change lesser to less
+- add in additional warnings
+
+```{r}
+Z.prop.test<-function(p1, n1, p2=NULL, n2=NULL, P0, alternative="two.sided", conf.level=0.95) {
+  if(is.null(p2)||is.null(n2)) {
+#one sample test
+    if (alternative == "two.sided") {
+      z <- (p1 - p0)/sqrt(p0 * (1 - p0)/n1)
+      p <- 1 - pnorm(z, lower.tail = TRUE) + pnorm(z, lower.tail = FALSE)
+          lower <- p1 - qnorm(0.975) * sqrt(p1 * (1 - p1)/n1)
+    upper <- P1 + qnorm(0.975) * sqrt(P1 * (1 - P1)/n1)
+    ci <- c(lower, upper)
+      
+    if (P0<p1)#greater
+    z <- (p1 - p0)/sqrt(p0 * (1 - p0)/n1)
+    p <- pnorm(z, upper.tail=TRUE)
+    lower <- p1 - qnorm(0.975) * sqrt(p1 * (1 - p1)/n1)
+    upper <- P1 + qnorm(0.975) * sqrt(P1 * (1 - P1)/n1)
+    ci <- c(lower, upper)
+    
+     if (P0>p1)#lesser
+    z <- (p1-p0)/sqrt(p0 * (1 - p0)/n1)
+    p <- pnorm(z, lower.tail=TRUE)
+    lower <- p1 - qnorm(0.975) * sqrt(p1 * (1 - p1)/n1)
+    upper <- P1 + qnorm(0.975) * sqrt(P1 * (1 - P1)/n1)
+    ci <- c(lower, upper)
+    
+    l<-list(
+    "Z" = z,
+    "p" = p,
+    "Confidence interval" = ci)
+    }
+    
+    
   }
-if ((n1∗p0>5) & n1∗(1−p0)>5) {
-  #runtest
-} else {#runtest 
-  paste("Warning: failed one or more validity tests, data may not be normally distributed")
-  }
+  
+  if ((n1∗p0<=5) & n1∗(1−p0)<=5) {
+    paste("Warning: failed one or more validity tests, data may not be normally distributed")}
+ return(l) 
+}
+
+```
+
+```{r}
+Z.prop.test(P1=0.6, P0=0.8, N1=30)
 ```
 
 
@@ -45,7 +157,11 @@ if (n1*p1>5) & (n2*p2>5) & n1(1-p1)>5 & n2(1-p2)>5{
   paste("Warning: failed one or more validity tests, data may not be normally distributed")
   }
 
-  
+  list(
+    "Z" = z
+    "p" = 
+    "Confidence interval" = 
+  )
 #one sample
   z <- (p1 - p0)/sqrt(p0 * (1 - p0)/n1)
   
