--- a/homework-week-6.Rmd
+++ b/homework-week-6.Rmd
@@ -111,86 +111,86 @@ Z.prop.test(p1=0.6, p0=0.8, n1=30)
 Z.prop.test(p1=0.9, p0=0.8, n1=10, alternative = "greater")
 ```
 
-```
-**TO DO**
+#PART 2
 
-- add in additional warnings
+[2] The dataset from Kamilar and Cooper has in it a large number of variables related to life history and body size. For this exercise, the end aim is to fit a simple linear regression model to predict longevity (MaxLongevity_m) measured in months from species’ brain size (Brain_Size_Species_Mean) measured in grams. Do the following for both  longevity~brain size and  log(longevity)~log(brain size).
 
+Fit the regression model and, using {ggplot2}, produce a scatterplot with the fitted line superimposed upon the data. Append the the fitted model equation to your plot (HINT: use the function geom_text()).
+
+
+Identify and interpret the point estimate of the slope (β1β1), as well as the outcome of the test associated with the hypotheses H0: β1β1 = 0; HA: β1β1 ≠ 0. Also, find a 90 percent CI for the slope (β1β1) parameter.
+Using your model, add lines for the 90 percent confidence and prediction interval bands on the plot and add a legend to differentiate between the lines.
+Produce a point estimate and associated 90 percent PI for the longevity of a species whose brain weight is 800 gm. Do you trust the model to predict observations accurately for this value of the explanatory variable? Why or why not?
+Looking at your two models, which do you think is better? Why?
 ```{r}
-Z.prop.test<-function(p1, n1, p2=NULL, n2=NULL, P0, alternative="two.sided", conf.level=0.95) {
-  if(is.null(p2)||is.null(n2)) {
-#one sample test
-    if (alternative == "two.sided") {
-      z <- (p1 - p0)/sqrt(p0 * (1 - p0)/n1)
-      p <- 1 - pnorm(z, lower.tail = TRUE) + pnorm(z, lower.tail = FALSE)
-          lower <- p1 - qnorm(0.975) * sqrt(p1 * (1 - p1)/n1)
-    upper <- P1 + qnorm(0.975) * sqrt(P1 * (1 - P1)/n1)
-    ci <- c(lower, upper)
-      
-    if (P0<p1)#greater
-    z <- (p1 - p0)/sqrt(p0 * (1 - p0)/n1)
-    p <- pnorm(z, upper.tail=TRUE)
-    lower <- p1 - qnorm(0.975) * sqrt(p1 * (1 - p1)/n1)
-    upper <- P1 + qnorm(0.975) * sqrt(P1 * (1 - P1)/n1)
-    ci <- c(lower, upper)
-    
-     if (P0>p1)#lesser
-    z <- (p1-p0)/sqrt(p0 * (1 - p0)/n1)
-    p <- pnorm(z, lower.tail=TRUE)
-    lower <- p1 - qnorm(0.975) * sqrt(p1 * (1 - p1)/n1)
-    upper <- P1 + qnorm(0.975) * sqrt(P1 * (1 - P1)/n1)
-    ci <- c(lower, upper)
-    
-    l<-list(
-    "Z" = z,
-    "p" = p,
-    "Confidence interval" = ci)
-    }
-    
-    
-  }
-  
-  if ((n1∗p0<=5) & n1∗(1−p0)<=5) {
-    paste("Warning: failed one or more validity tests, data may not be normally distributed")}
- return(l) 
-}
+library(curl)
+f <- curl("https://raw.githubusercontent.com/fuzzyatelin/fuzzyatelin.github.io/master/AN597_Fall17/KamilarAndCooperData.csv")
+d <- read.csv(f, header = TRUE, stringsAsFactors = FALSE)
+head(d)
+```
+
+##Fit the regression model and, using {ggplot2}, produce a scatterplot with the fitted line superimposed upon the data. Append the the fitted model equation to your plot (HINT: use the function geom_text()).
+```{r}
+x1<-d$Brain_Size_Species_Mean
+y1<-d$MaxLongevity_m
+x2<-log(x1)
+y2<-log(y1)
+```
+```{r}
+m <- lm(y1 ~ x1, data = d)
+m
+m2 <- lm(y2 ~ x2, data = d)
+m2
+```
+```{r}
+rout <- list(paste('Fitted model: ', round(coef(m)[1], 3), ' + ',
+                               round(coef(m)[2], 3), ' x', sep = ''),
+              paste('R^2 == ', round(summary(m)[['r.squared']], 3),
+sep = '')  )
 
 ```
 
 ```{r}
-Z.prop.test(P1=0.6, P0=0.8, N1=30)
+rout2 <- list(paste('Fitted model: ', round(coef(m2)[1], 3), ' + ',
+                               round(coef(m2)[2], 3), ' x', sep = ''),
+              paste('R^2 == ', round(summary(m2)[['r.squared']], 3),
+sep = '')  )
 ```
+
+
+```{r}
+library(ggplot2)
+g <- ggplot(data = d, aes(x = Brain_Size_Species_Mean, y = MaxLongevity_m))
+g <- g + geom_point()
+g <- g + geom_smooth(method = "lm", formula = y ~ x)
+g <- g + geom_text(aes(x = 2, y = 50, label = rout[[1]]), hjust = 0) +
+   geom_text(aes(x = 2, y = 0, label = rout[[2]]), hjust = 0, parse = TRUE)
+g
+```
+The slope β1 is 1.218 which suggests that for every increase of 1 gram of brain weight, longevity of the species is predicted to increase by 1.218 months. This demonstrates there is a positive relationship between these two variables and supports the alternative hypothesis that β1 does not equal 0. Based on the R squared value, this relationship describes roughly 49% of the variation between these two variables.
+```{r}
+ci <- confint(m, level = 0.90)  # using the results of lm()
+ci
+```
+The 90% confidence interval for β1 is 1.04-1.4
+
+
+
+
+
+
 
 
 
 ```{r}
-if (n1*p1>5) & (n2*p2>5) & n1(1-p1)>5 & n2(1-p2)>5{
-  #runtest
-} else {#runtest 
-  paste("Warning: failed one or more validity tests, data may not be normally distributed")
-  }
-
-  list(
-    "Z" = z
-    "p" = 
-    "Confidence interval" = 
-  )
-#one sample
-  z <- (p1 - p0)/sqrt(p0 * (1 - p0)/n1)
-  
-#two sample
-  pstar<-(p1 * n1 + p2 * n2) / (n1 + n2)
-  z <- (p2 - p1)/sqrt((pstar * (1 - pstar)) * (1/n1 + 1/n2))
-  
-  if (alternative="greater"){
-    if (p2>p1) {}
-  }
-  ]
-  if (alternative="greater"){
-    if (p2<p1){}
-  }
-  ]
-}
+library(ggplot2)
+g <- ggplot(data = d, aes(x = log(Brain_Size_Species_Mean), y = log(MaxLongevity_m)))
+g <- g + geom_point()
+g <- g + geom_smooth(method = "lm", formula = y ~ x)
+g <- g + geom_text(aes(x = 1, y = 4.4, label = rout2[[1]]), hjust = 0) +
+   geom_text(aes(x = 1, y = 4.25, label = rout2[[2]]), hjust = 0, parse = TRUE)
+g
 ```
 
-test
+##Identify and interpret the point estimate of the slope (β1), as well as the outcome of the test associated with the hypotheses H0: β1 = 0; HA: β1 ≠ 0. Also, find a 90 percent CI for the slope (β1) parameter.
+
